# copyrpc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  channel_bench.parquet  pyproject.toml
.cargo/: config.toml
aggfs/: Cargo.toml
aggfs/include/: aggfs.h
aggfs/src/: client.rs  ffi.rs  lib.rs  message.rs  routing.rs  store.rs
aggfs/tests/: integration.rs
bench_results/: run_bench.sh  run_bench_qd.sh  run_perf.sh  run_qd_compare.sh  run_qd_perf_compare.sh
benchkv/: Cargo.toml  README.md  visualize.py
benchkv/analysis/: 2rank_perf_analysis.md
benchkv/scripts/: 128n.sh  16n.sh  32n.sh  4n.sh  64n.sh  8n.sh  batchhold_qd1_np2.sh  coal_qd1_np16.sh  coal_qd1_np2.sh  coal_qd1_np8.sh  debug_meta.sh  merge_benchkv.py
benchkv/scripts/ad-hoc/: 128n.sh  16n.sh  32n.sh  4n.sh  64n.sh  8n.sh  adaptive_budget_16n.sh  adaptive_budget_64n.sh  adaptive_hold_sweep.sh  adaptive_hold_test.sh  batchhold_qd1_np16.sh  batchhold_qd1_np4.sh  batchhold_qd1_np8.sh  coal_qd1_np4.sh  debug_agg.sh  deleg_outstanding_16n.sh  deleg_profile.sh  deleg_qd32_16n.sh  deleg_qd32_32n.sh  deleg_qd32_4n.sh  deleg_qd32_8n.sh  delegation_bench.sh  delegation_large.sh  delegation_quick.sh  delegation_v2.sh  dynhold_np8.sh  ipcskip_qd1_np16.sh  ipcskip_qd1_np2.sh  ipcskip_qd1_np4.sh  ipcskip_qd1_np8.sh  paper_all_np16.sh  paper_all_np2.sh  paper_all_np32.sh  paper_all_np4.sh  paper_all_np64.sh  paper_all_np8.sh  paper_ep_scaling.sh  paper_ep_scaling_copyrpc.sh  paper_ep_scaling_ucx.sh  qd1_np16.sh  (+14 more)
benchkv/scripts/paper/: fig1_ucx_vs_deleg_np16.sh  fig1_ucx_vs_deleg_np2.sh  fig1_ucx_vs_deleg_np32.sh  fig1_ucx_vs_deleg_np4.sh  fig1_ucx_vs_deleg_np64.sh  fig1_ucx_vs_deleg_np8.sh  fig2_direct_vs_deleg_np16.sh  fig2_direct_vs_deleg_np2.sh  fig2_direct_vs_deleg_np32.sh  fig2_direct_vs_deleg_np4.sh  fig2_direct_vs_deleg_np8.sh  fig3_hold_effect_np16.sh  fig3_hold_effect_np2.sh  fig3_hold_effect_np32.sh  fig3_hold_effect_np4.sh  fig3_hold_effect_np8.sh  fig4_ep_scaling.sh
benchkv/src/: adaptive_budget.rs  affinity.rs  client.rs  copyrpc_direct_backend.rs  daemon.rs  delegation_backend.rs  epoch.rs  erpc_backend.rs  main.rs  memstat.rs  message.rs  mpi_util.rs  parquet_out.rs  qd_sample.rs  shm.rs  slot.rs  storage.rs  ucx_am.rs  ucx_am_backend.rs  workload.rs
copyrpc/: ARCHITECTURE.md  Cargo.toml  README.md
copyrpc-fs/: Cargo.toml
copyrpc/benches/: copyrpc_pingpong.rs  pingpong.rs
copyrpc/src/: dc.rs  encoding.rs  error.rs  lib.rs  rc.rs  ring.rs  transport.rs
copyrpc/tests/: integration_test.rs  raw_rdma_test.rs
delegationrpc/: Cargo.toml
dev/: omni.txt
docs/: delegation-architecture.md  erpc_design.md  scalerpc_design.md
erpc/: Cargo.toml
erpc/benches/: rpc_bench.rs
erpc/src/: buffer.rs  config.rs  error.rs  flow_control.rs  lib.rs  packet.rs  reliability.rs  rpc.rs  session.rs  timing.rs  transport.rs
erpc/tests/: common.rs  rpc_tests.rs
fastmap/: Cargo.toml
ibverbs_sys/: Cargo.toml  build.rs  wrapper.h
inproc/: Cargo.toml  OPTIMIZATION_COMPLETE.md  visualize.py
ipc/: Cargo.toml
ipc/benches/: multi_client.rs  pingpong.rs
ipc/src/: lib.rs  mpsc_ffwd.rs  shm.rs
ipc/tests/: ipc.rs
memo/: PERFORMANCE_ANALYSIS.md  TODO.md  TODO_plan.md  cqe_compression_debug.md  delegation-batching-bistability.md  delegation-no-batching-theory.md  erpc-perf-analysis-2026-01.md  fix.md  fs.md  inproc-spsc-asm-perf-analysis.md  mlx5-dc-stream-tasks.md  mlx5-test-coverage.md  mlx5-todo.md  mlx5-wqe-builder.md  scalerpc-perf-analysis.md  ucx-cqe-compression.md  wqe_builder_self_design.md  wqe_table.md
mempc_bench/: Cargo.toml  README.md
mempc_bench/scripts/: plot.py  run_alltoall_bench.sh  run_alltoall_perf.sh  run_manyclient_bench.sh  run_manyclient_perf.sh
mlx5/: Cargo.toml  DEVX_PROGRESS.md  README.md  build.rs  design.md  design_detail.md  refactor.md  wqe_builder.md  wqe_macro_typestate.md
mlx5/benches/: multi_qp.rs  pingpong.rs  rdma_ops.rs  send_recv_small.rs
mlx5/docs/: memory_window_investigation.md
mlx5/src/: barrier.rs  builder_common.rs  cq.rs  dc.rs  device.rs  devx.rs  lib.rs  mono_cq.rs  pd.rs  prm.rs  qp.rs  srq.rs  test_utils.rs  tm_srq.rs  transport.rs  types.rs  ud.rs  wqe.rs
mlx5/src/dc/: builder.rs  mod.rs
mlx5/src/qp/: builder.rs  mod.rs
mlx5/src/tm_srq/: builder.rs  mod.rs
mlx5/src/ud/: builder.rs  mod.rs
mlx5/src/wqe/: emit.rs  macros.rs  mod.rs  traits.rs
mlx5/tests/: common.rs  dc_tests.rs  devx_qp.rs  inline_scatter_tests.rs  mono_cq_tests.rs  mw_tests.rs  qp_destroy_test.rs  rc_tests.rs  relaxed_ordering_tests.rs  srq_tests.rs  tm_tests.rs  ud_tests.rs  wraparound_tests.rs
ref/: erpc.md  (+1 more)
rpc_bench/: Cargo.toml  README.md
rpc_bench/scripts/: merge_rpc_bench.py  multi_client_17n.sh  multi_client_33n.sh  multi_client_5n.sh  multi_client_65n.sh  multi_client_large.sh  multi_client_small.sh  one_to_one.sh  plot.py
rpc_bench/src/: affinity.rs  copyrpc_bench.rs  epoch.rs  erpc_bench.rs  main.rs  mercury_bench.rs  mpi_util.rs  parquet_out.rs  rc_send_recv_bench.rs  ucx_am_bench.rs
scalerpc/: Cargo.toml  PERFORMANCE.md
scalerpc/benches/: pingpong.rs
scalerpc/src/: client.rs  config.rs  connection.rs  error.rs  group.rs  lib.rs  mapping.rs  pool.rs  protocol.rs  server.rs
scalerpc/tests/: common.rs  group_scheduler_test.rs  integration_test.rs  perf_test.rs
shm_spsc/: Cargo.toml
shm_spsc/benches/: multi_client.rs  pingpong.rs
shm_spsc/src/: lib.rs  mpsc_shared.rs  shm.rs
shm_spsc/tests/: ipc.rs
tbb_bench/: CMakeLists.txt
tbb_bench/src/: all_to_all.cpp  common.h  server_client.cpp
thread_channel/: ANALYSIS_SUMMARY.md  BENCHMARK_RESULTS.md  Cargo.toml  OPTIMIZATIONS_APPLIED.md  OPTIMIZED_BENCHMARK_RESULTS.md  analysis_bottleneck.md  analysis_perf_data.md  run_bench.sh  visualize.py
thread_channel/benches/: call.rs  comparison.rs  mesh.rs  spsc_perf.rs
thread_channel/examples/: asm_inspect.rs
thread_channel/src/: flux.rs  lib.rs  mesh.rs  mpsc.rs  spsc.rs  spsc_lamport.rs  spsc_rpc.rs
thread_channel/src/transport/: common.rs  fastforward.rs  lamport.rs  mod.rs  onesided.rs
thread_channel/tests/: flux_tests.rs  mesh_tests.rs
(+98 files in other folders)
