[workspace]
edition = "2025"
members = ["mlx5", "mlx5_sys", "ibverbs_sys"]
resolver = "3"

[workspace.dependencies]
libc = "0.2"
anyhow = "1"
bindgen = "0.72"

# ベンチマーク用最適化設定
[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

# リリース用最適化設定
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
