[package]
name = "aggfs"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ipc = { path = "../ipc" }
copyrpc = { path = "../copyrpc" }
mlx5 = { path = "../mlx5" }
pmem = { path = "../pmem" }
fastmap = { path = "../fastmap" }
nix.workspace = true
libc.workspace = true
mlx5_sys = { path = "../mlx5_sys" }

[features]
bench-bin = ["dep:clap", "dep:mpi", "dep:gethostname"]

[dependencies.clap]
workspace = true
optional = true

[dependencies.mpi]
workspace = true
optional = true

[dependencies.gethostname]
version = "0.5"
optional = true

[[bin]]
name = "aggfsd"
required-features = ["bench-bin"]
