[package]
name = "benchkv"
version = "0.1.0"
edition = "2024"

[dependencies]
copyrpc = { path = "../copyrpc" }
thread_channel = { path = "../thread_channel" }
shm_spsc = { path = "../shm_spsc" }
mlx5 = { path = "../mlx5" }
mpi.workspace = true
clap.workspace = true
parquet.workspace = true
arrow.workspace = true
libc.workspace = true
anyhow.workspace = true
rand = "0.9"
rand_distr = "0.5"

[[bin]]
name = "benchkv"
