[package]
name = "benchkv"
version = "0.1.0"
edition = "2024"

[dependencies]
copyrpc = { path = "../copyrpc" }
inproc = { path = "../inproc" }
ipc = { path = "../ipc" }
mlx5 = { path = "../mlx5" }
mpi.workspace = true
clap.workspace = true
parquet.workspace = true
arrow.workspace = true
libc.workspace = true
anyhow.workspace = true
erpc = { path = "../erpc" }
ucx_sys = { path = "../ucx_sys" }
gethostname = "1"
rand = "0.9"
rand_distr = "0.5"

[[bin]]
name = "benchkv"
