[package]
name = "copyrpc"
version = "0.1.0"
edition = "2024"

[dependencies]
fastmap = { version = "0.1.0", path = "../fastmap" }
mlx5 = { version = "0.1.0", path = "../mlx5" }
mlx5_sys = { version = "0.1.0", path = "../mlx5_sys" }
slab.workspace = true
mpi = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

[features]
bench-bin = ["mpi", "clap", "parquet", "arrow", "libc"]

[dev-dependencies]
criterion.workspace = true
libc.workspace = true
core_affinity.workspace = true

[[bench]]
name = "copyrpc_pingpong"
harness = false

[[bin]]
name = "copyrpc_bench"
required-features = ["bench-bin"]

[lints.clippy]
manual_div_ceil = "allow"
