[package]
name = "erpc"
version = "0.1.0"
edition = "2024"

[dependencies]
mlx5 = { path = "../mlx5" }
libc.workspace = true

[dev-dependencies]
criterion.workspace = true
core_affinity.workspace = true
mlx5 = { path = "../mlx5", features = ["test-utils"] }

[[bench]]
name = "rpc_bench"
harness = false

[lints.clippy]
type_complexity = "allow"
