[package]
name = "ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
nix.workspace = true
libc.workspace = true
mempc = { path = "../mempc" }

[dev-dependencies]
criterion.workspace = true
uuid = { version = "1", features = ["v7"] }
core_affinity.workspace = true

[[bench]]
name = "pingpong"
harness = false

[[bench]]
name = "multi_client"
harness = false
