[package]
name = "mlx5"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2"
fastmap = { version = "0.1.0", path = "../fastmap" }
mlx5_sys = { version = "0.1.0", path = "../mlx5_sys" }
rapidhash = "1"

[dev-dependencies]
libc = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rdma_ops"
harness = false
