[package]
name = "mlx5"
version = "0.1.0"
edition = "2024"

[features]
test-utils = ["dep:libc"]

[dependencies]
bitflags.workspace = true
fastmap = { version = "0.1.0", path = "../fastmap" }
mlx5_sys = { version = "0.1.0", path = "../mlx5_sys" }
rapidhash.workspace = true
libc = { workspace = true, optional = true }

[dev-dependencies]
libc.workspace = true
criterion.workspace = true
core_affinity.workspace = true

[[bench]]
name = "rdma_ops"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "multi_qp"
harness = false
required-features = ["test-utils"]

[lints.clippy]
manual_div_ceil = "allow"
type_complexity = "allow"
