[package]
name = "rpc_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
copyrpc = { path = "../copyrpc" }
mlx5 = { path = "../mlx5" }
mlx5_sys = { path = "../mlx5_sys" }
ucx_sys = { path = "../ucx_sys" }

mpi.workspace = true
clap.workspace = true
parquet.workspace = true
arrow.workspace = true
libc.workspace = true

[[bin]]
name = "rpc_bench"
