[package]
name = "scalerpc"
version = "0.1.0"
edition = "2021"

[dependencies]
mlx5 = { version = "0.1.0", path = "../mlx5" }
libc.workspace = true
minstant.workspace = true

[dev-dependencies]
criterion.workspace = true
core_affinity.workspace = true
mlx5 = { version = "0.1.0", path = "../mlx5", features = ["test-utils"] }

[[bench]]
name = "pingpong"
harness = false

[lints.clippy]
type_complexity = "allow"
