[package]
name = "shm_spsc"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30", features = ["mman", "fs"] }
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1", features = ["v7"] }

[[bench]]
name = "pingpong"
harness = false
