[package]
name = "shm_spsc"
version = "0.1.0"
edition = "2024"

[dependencies]
nix.workspace = true
libc.workspace = true

[dev-dependencies]
criterion.workspace = true
uuid = { version = "1", features = ["v7"] }
core_affinity.workspace = true

[[bench]]
name = "pingpong"
harness = false

[[bench]]
name = "multi_client"
harness = false
