[package]
name = "thread_channel"
version = "0.1.0"
edition = "2024"

[dependencies]
slab = "0.4"
clap = { version = "4", features = ["derive"], optional = true }
parquet = { version = "54", optional = true }
arrow = { version = "54", optional = true }
core_affinity = { version = "0.8", optional = true }

[features]
bench-bin = ["clap", "parquet", "arrow", "core_affinity"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
core_affinity = "0.8"

[[bench]]
name = "call"
harness = false

[[bin]]
name = "cluster_bench"
required-features = ["bench-bin"]

[[bin]]
name = "perf_bench"
required-features = ["bench-bin"]

[[bin]]
name = "raw_spsc_bench"
required-features = ["bench-bin"]
