[package]
name = "thread_channel"
version = "0.1.0"
edition = "2024"

[dependencies]
slab.workspace = true
clap = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }
core_affinity = { workspace = true, optional = true }
rtrb = { version = "0.3", optional = true }
omango = { version = "0.2", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[features]
bench-bin = ["clap", "parquet", "arrow", "core_affinity"]
rtrb = ["dep:rtrb"]
omango = ["dep:omango"]
crossbeam = ["dep:crossbeam-channel"]

[dev-dependencies]
criterion.workspace = true
core_affinity.workspace = true

[[bench]]
name = "call"
harness = false

[[bench]]
name = "mesh"
harness = false

[[bin]]
name = "cluster_bench"
required-features = ["bench-bin"]

[[bin]]
name = "perf_bench"
required-features = ["bench-bin"]

[[bin]]
name = "raw_spsc_bench"
required-features = ["bench-bin"]
